Feat : 무중단배포 설정